// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TitleBar > (Snapshot) renders Mac variant 1`] = `
<div
  class="border-border bg-background relative flex h-6 items-center border-b-2 select-none justify-start"
  data-testid="title-bar"
>
  <div
    class="group flex items-center gap-1.5 pl-3"
    data-testid="mac-window-controls"
  >
    <button
      class="bg-accent-red outline-foreground h-3 w-3 rounded-full opacity-80 outline-2 group-hover:opacity-100"
      title="Close"
    />
    <button
      class="bg-accent-yellow outline-foreground h-3 w-3 rounded-full opacity-80 outline-2 group-hover:opacity-100"
      title="Minimize"
    />
    <button
      class="bg-accent-green outline-foreground h-3 w-3 rounded-full opacity-80 outline-2 group-hover:opacity-100"
      title="Maximize"
    />
  </div>
  <span
    class="text-foreground font-heading text-md pointer-events-none absolute inset-x-0 flex text-center font-medium"
  >
    <span
      class="flex w-full items-center justify-center gap-2"
    >
      <span
        class="ml-0.5 dark:hidden"
      >
        <svg
          class="w-6 h-4"
          height="100"
          id="svg2"
          viewBox="0 0 99.999998 100"
          width="100"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:svg="http://www.w3.org/2000/svg"
        >
          <defs
            id="defs2"
          />
          <path
            d="M 49.999997,5.5078125e-6 C 10.000227,5.5078125e-6 -2.8686701e-6,10.000046 -2.8686701e-6,50.000006 -2.8686701e-6,89.999966 10.000227,100.00001 49.999997,100.00001 c 39.99977,0 50,-10.000044 50,-50.000004 0,-39.99996 -10.00023,-50.0000004921875 -50,-50.0000004921875 z M 29.999997,23.599616 h 40 l -20,26.40039 h 40 l -20,26.40039 -20,-26.40039 -20,26.40039 L 9.9999971,50.000006 H 49.999997 Z"
            id="path1"
            style="fill: #000000; stroke-width: 0.999999;"
          />
        </svg>
      </span>
      <span
        class="ml-0.5 hidden dark:block!"
      >
        <svg
          class="w-6 h-4"
          height="100"
          id="svg2"
          viewBox="0 0 99.999998 100"
          width="100"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:svg="http://www.w3.org/2000/svg"
        >
          <defs
            id="defs2"
          />
          <path
            d="M 50,0 C 10.00023,0 0,10.00004 0,50 0,89.99996 10.00023,100 50,100 89.99977,100 100,89.99996 100,50 100,10.00004 89.99977,0 50,0 Z M 30,23.59961 H 70 L 50,50 H 90 L 70,76.40039 50,50 30,76.40039 10,50 h 40 z"
            id="path1"
            style="fill: #ffffff; fill-opacity: 1; stroke-width: 0.999999;"
          />
        </svg>
      </span>
      Nuclear
    </span>
  </span>
</div>
`;

exports[`TitleBar > (Snapshot) renders Windows variant 1`] = `
<div
  class="border-border bg-background relative flex h-6 items-center border-b-2 select-none justify-end"
  data-testid="title-bar"
>
  <div
    class="flex h-full items-center"
    data-testid="windows-window-controls"
  >
    <button
      class="text-foreground hover:bg-primary hover:text-foreground inline-flex h-full w-11 items-center justify-center border-none bg-transparent"
      title="Minimize"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-minus"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
      </svg>
    </button>
    <button
      class="text-foreground hover:bg-primary hover:text-foreground inline-flex h-full w-11 items-center justify-center border-none bg-transparent"
      title="Maximize"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-square"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="3"
        />
      </svg>
    </button>
    <button
      class="text-foreground hover:bg-accent-red inline-flex h-full w-11 items-center justify-center border-none bg-transparent hover:text-white"
      title="Close"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
  <span
    class="text-foreground font-heading text-md pointer-events-none absolute inset-x-0 flex text-center font-medium"
  >
    <span
      class="flex w-full items-center justify-center gap-2"
    >
      <span
        class="ml-0.5 dark:hidden"
      >
        <svg
          class="w-6 h-4"
          height="100"
          id="svg2"
          viewBox="0 0 99.999998 100"
          width="100"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:svg="http://www.w3.org/2000/svg"
        >
          <defs
            id="defs2"
          />
          <path
            d="M 49.999997,5.5078125e-6 C 10.000227,5.5078125e-6 -2.8686701e-6,10.000046 -2.8686701e-6,50.000006 -2.8686701e-6,89.999966 10.000227,100.00001 49.999997,100.00001 c 39.99977,0 50,-10.000044 50,-50.000004 0,-39.99996 -10.00023,-50.0000004921875 -50,-50.0000004921875 z M 29.999997,23.599616 h 40 l -20,26.40039 h 40 l -20,26.40039 -20,-26.40039 -20,26.40039 L 9.9999971,50.000006 H 49.999997 Z"
            id="path1"
            style="fill: #000000; stroke-width: 0.999999;"
          />
        </svg>
      </span>
      <span
        class="ml-0.5 hidden dark:block!"
      >
        <svg
          class="w-6 h-4"
          height="100"
          id="svg2"
          viewBox="0 0 99.999998 100"
          width="100"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:svg="http://www.w3.org/2000/svg"
        >
          <defs
            id="defs2"
          />
          <path
            d="M 50,0 C 10.00023,0 0,10.00004 0,50 0,89.99996 10.00023,100 50,100 89.99977,100 100,89.99996 100,50 100,10.00004 89.99977,0 50,0 Z M 30,23.59961 H 70 L 50,50 H 90 L 70,76.40039 50,50 30,76.40039 10,50 h 40 z"
            id="path1"
            style="fill: #ffffff; fill-opacity: 1; stroke-width: 0.999999;"
          />
        </svg>
      </span>
      Nuclear
    </span>
  </span>
</div>
`;
